--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'androidx.navigation.safeargs'
 
 android {
@@ -9,7 +11,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.base.app"
+        applicationId "com.fortmart.customer"
         minSdkVersion 18
         targetSdkVersion 30
         versionCode 1
