--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,14 @@ android {
 
     buildFeatures {
         dataBinding = true
+        viewBinding = true
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = "1.8"
     }
